--- a/src/Components/CSS/styles.css
+++ b/src/Components/CSS/styles.css
@@ -7,10 +7,48 @@
 }
 
 .nav-brand {
-  padding: 20px;
+  padding-right: 400px;
+}
+
+.service {
+  width: 370px;
+  margin-top: 100px;
+  padding-left: 60px;
+  padding-top: 30px;
+}
+.btn {
+  background-color: #a63634;
+  color: white;
+  margin-top: 30px;
+}
+.service-title {
+  font-family: sans-serif;
+}
+.draw1 {
+  height: 150px;
+  position: absolute;
+  top: 42px;
 }
 #nav {
-  margin-top: -40px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 70px;
+}
+
+.rectangle {
+  height: 500px;
+  width: 400px;
+  position: absolute;
+  top: 100px;
+  left: 1150px;
+}
+.student {
+  height: 500px;
+  position: absolute;
+  top: 140px;
+  left: 1050px;
+  border-radius: 6px;
+  background-image: url(../img/rectangle2.png);
+}
+.stud-img {
+  width: 400px;
+  height: 500px;
 }
