--- a/src/Components/CSS/styles.css
+++ b/src/Components/CSS/styles.css
@@ -13,7 +13,7 @@
 .service {
   width: 370px;
   margin-top: 100px;
-  padding-left: 60px;
+  padding-left: 90px;
   padding-top: 30px;
 }
 .btn {
@@ -22,7 +22,8 @@
   margin-top: 30px;
 }
 .service-title {
-  font-family: sans-serif;
+  font-family: Helvetica !important;
+  font-weight: bold;
 }
 .draw1 {
   height: 150px;
@@ -37,18 +38,39 @@
   height: 500px;
   width: 400px;
   position: absolute;
-  top: 100px;
+  top: 70px;
+  z-index: -1;
   left: 1150px;
 }
 .student {
   height: 500px;
-  position: absolute;
-  top: 140px;
-  left: 1050px;
+  z-index: 2;
+  margin-right: 30px;
   border-radius: 6px;
   background-image: url(../img/rectangle2.png);
 }
 .stud-img {
   width: 400px;
   height: 500px;
+}
+.hero {
+  padding-top: 50px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.about-service {
+  font-family: Helvetica;
+}
+body {
+  font-family: Helvetica;
+}
+#card-img {
+  height: 60px;
+  width: 60px;
+}
+#card {
+  align-items: center;
+  text-align: center;
+  justify-content: center;
 }
