--- a/src/Components/CSS/styles.css
+++ b/src/Components/CSS/styles.css
@@ -40,7 +40,7 @@
   position: absolute;
   top: 70px;
   z-index: -1;
-  left: 1150px;
+  left: 1135px;
 }
 .student {
   height: 500px;
@@ -73,4 +73,16 @@ body {
   align-items: center;
   text-align: center;
   justify-content: center;
+}
+.student2 {
+  background-image: url(../img/rectangle2.png);
+  width: 400px;
+}
+.subtract {
+  height: 150px;
+  margin-left: 450px;
+  float: left;
+}
+.booking {
+  margin-left: 405px;
 }
