--- a/src/Components/CSS/styles.css
+++ b/src/Components/CSS/styles.css
@@ -132,7 +132,10 @@ body {
   padding: 10px;
   padding-bottom: 30px;
 }
-
+.stud-sub {
+  margin-top: 460px;
+  margin-left: 120px;
+}
 .review-container {
   margin-left: auto;
   margin-right: auto;
