finished faq page

--- a/src/Components/CSS/styles.css
+++ b/src/Components/CSS/styles.css
@@ -71,7 +71,7 @@
 .about-service {
   font-family: Helvetica;
 }
-body h1 h2 h3 h4 {
+body h1 {
   font-family: Adobe-Garamond-Bold !important;
 }
 #card-img {
