--- a/src/Components/CSS/styles.css
+++ b/src/Components/CSS/styles.css
@@ -3,11 +3,11 @@
   src: url(../fonts/AGaramondPro-Bold.otf);
 }
 .logo {
-  height: 40px;
-  width: 40px;
+  height: 30px;
+  width: 30px;
 }
 .brand {
-  height: 35px;
+  height: 30px;
 }
 
 .nav-brand {
@@ -73,6 +73,7 @@
 }
 body h1 {
   font-family: Adobe-Garamond-Bold !important;
+  overflow-x: hidden;
 }
 #card-img {
   height: 60px;
