--- a/src/Components/CSS/styles.css
+++ b/src/Components/CSS/styles.css
@@ -270,6 +270,9 @@ body h4 {
   float: right;
   margin-top: -60px;
 }
+.tutor-sm {
+  display: none;
+}
 .join-img {
   height: 50px;
   width: 50px;
@@ -305,9 +308,17 @@ body h4 {
   .stud-img-sm {
     display: block;
     margin-left: -25px;
+    width: 370px;
+  }
+  .become-btn {
+    margin-left: 100px;
+    margin-top: -20px;
+  }
+  .sub-tut {
+    height: 100px !important;
   }
   .book-btn {
-    margin-top: 20px;
+    margin-top: -20px;
     margin-left: 100px;
   }
   .newsletter-btn {
@@ -325,6 +336,14 @@ body h4 {
   .footer span {
     font-size: 12px;
     color: #ffffff8d;
+  }
+  .tutor-sm {
+    display: block;
+    margin-left: -25px;
+    width: 370px;
+  }
+  .tutor {
+    width: 370px;
   }
   .subs-div {
     margin-top: 0px;
@@ -439,7 +458,7 @@ body h4 {
     width: fit-content;
   }
   .tutor-images {
-    margin-left: 528px;
+    display: none;
   }
   .booking-text {
     width: fit-content !important;
