--- a/src/Components/CSS/styles.css
+++ b/src/Components/CSS/styles.css
@@ -15,6 +15,11 @@
   font-size: 18px;
   font-weight: bold;
 }
+.private {
+  color: rgba(7, 10, 19, 0.6);
+  font-weight: 400;
+  font-size: 23px;
+}
 .brand {
   height: 30px;
 }
@@ -22,13 +27,18 @@
   padding-right: 290px;
   z-index: 1;
 }
+.nav-b {
+  margin-left: 20px;
+}
+.nav {
+  margin-left: 250px;
+}
 .nav-brand2 {
   padding-right: 200px;
   z-index: 1;
   margin-right: auto;
 }
 .service {
-  width: 370px;
   margin-top: 100px;
   padding-left: 90px;
   padding-top: 30px;
@@ -41,25 +51,57 @@
 .book-btn:hover {
   background-color: black;
 }
+.d-review {
+  text-align: left !important;
+}
 .book-btn a {
   text-decoration: none;
   color: white;
 }
 .service-title {
   font-family: Adobe-Garamond-Bold !important;
-  font-weight: bold;
+  font-weight: 700;
+  font-size: 55px;
+  line-height: 65px;
 }
 .draw1 {
+  padding-right: 20px;
   height: 130px;
   position: absolute;
-  top: 72px;
+  top: 50px;
+}
+.carousel-indicators [data-bs-target] {
+  box-sizing: content-box;
+  flex: 0 1 auto;
+  width: 10px; /* change width */
+  height: 10px; /* change height */
+  padding: 0;
+  margin-right: 3px;
+  margin-left: 3px;
+  text-indent: -999px;
+  cursor: pointer;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 0;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  opacity: 0.5;
+  transition: opacity 0.6s ease;
+  border-radius: 100%; /* add border-radius */
+}
+
+.carousel-indicators li {
+  margin-top: 10px;
+  width: 10px;
+  height: 10px;
+  border-radius: 100%;
 }
 .my-form {
   background-color: #ffffff;
 }
 .rectangle {
   background-image: url(../img/rectangle.png);
-  height: 500px;
+  height: 450px;
   width: 400px;
   top: 70px;
   z-index: -1;
@@ -67,16 +109,16 @@
 }
 .student {
   position: absolute;
-  height: 500px;
+  height: 450px;
   z-index: 1;
   right: 50px;
-  margin-top: 30px;
+  margin-top: 45px;
   border-radius: 6px;
   background-image: url(../img/rectangle2.png);
 }
 .stud-img {
   width: 400px;
-  height: 500px;
+  height: 450px;
 }
 .hero {
   padding-top: 50px;
@@ -145,7 +187,8 @@ body h4 {
   margin-top: 50px;
 }
 .step-title {
-  text-align: center;
+  text-align: left;
+  margin-left: 20px;
 }
 .all-steps {
   margin-right: auto;
@@ -163,8 +206,10 @@ body h4 {
   padding-bottom: 30px;
 }
 .stud-sub {
+  height: 80px;
+  width: 200px;
   margin-top: 460px;
-  margin-left: 120px;
+  margin-left: 200px;
 }
 .review-container {
   margin-left: auto;
