--- a/src/Components/CSS/styles.css
+++ b/src/Components/CSS/styles.css
@@ -155,9 +155,9 @@ body h4 {
   z-index: 1;
 }
 .subtract {
-  height: 100px;
-  margin-left: 450px;
-  float: left;
+  height: 130px;
+  margin-left: 455px;
+  float: right;
 }
 .booking {
   margin-left: 405px;
@@ -305,7 +305,7 @@ body h4 {
   height: 20px;
 }
 .d-form {
-  width: 200px;
+  width: 360px;
 }
 .sub-btn {
   background-color: #a63634;
