Fixing Mobile Homepage

--- a/src/Components/CSS/styles.css
+++ b/src/Components/CSS/styles.css
@@ -344,6 +344,9 @@ body h4 {
 .email {
   height: 100px;
 }
+.bucky {
+  background: rgba(251, 142, 66, 0.03);
+}
 .mod-head {
   padding: 0 !important;
   padding-right: 30px !important;
