--- a/src/Components/CSS/styles.css
+++ b/src/Components/CSS/styles.css
@@ -316,6 +316,9 @@ body h4 {
 .newsletter-btn {
   background-color: #a63634;
   color: white;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
 }
 .subscribe {
   width: 500px;
